<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="code.ProductActivity">

    <RelativeLayout
        android:id="@+id/ActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/title"
            android:textSize="32sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ActionBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/OptionBar">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_background"
                android:padding="10dp"
                android:inputType="text"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:layout_gravity="center"/>

                    <EditText
                        android:id="@+id/price"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_background"
                        android:padding="10dp"
                        android:inputType="numberDecimal"/>
                </LinearLayout>

                <Space
                    android:layout_width="60dp"
                    android:layout_height="match_parent"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/stock"
                        android:layout_gravity="center"/>

                    <EditText
                        android:id="@+id/stock"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_background"
                        android:padding="10dp"
                        android:inputType="number"/>
                </LinearLayout>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:lines="10"
                android:background="@drawable/edit_background"
                android:padding="10dp"
                android:inputType="textMultiLine"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/OptionBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:backgroundTint="@color/cardview_dark_background"/>

        <Space
            android:layout_width="60dp"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@color/cardview_dark_background"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>